/*
 * Copyright 2013 bits of proof zrt.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

package com.bitsofproof.supernode.api;

// input point of a transaction. 
message TransactionInput {
	required bytes source = 1; 				// source transaction hash
	required uint32 sourceix = 2;    		// index of the output in the source stransaction
	required uint32 sequence = 3; 			// higher wins
	required bytes script = 4;    			// inputs to the script of the transaction output
	optional bytes transaction = 5;			// the transaction this input is part of
	optional uint32 selfix = 6;				// self index within the transaction this input is part of
}

// output point of a transaction. 
message TransactionOutput {
	required uint64 value = 1; 				// value that can be claimed ...
	required bytes script = 2; 				// ... if satisfying this output script
	required uint32 selfix = 3;				// self index within the transaction this input is part of
	required bytes transaction = 4;			// the transaction this input is part of
	repeated string address = 5;			// address(es) output was sent (if standard tx)
	optional uint32 votes = 6;				// number of signatures from owner(s) needed to redeem
	optional bytes color = 7;				// color of this output (root transaction hash)
}

// a transaction. 
message Transaction {
	required uint32 bcsapiversion = 1;
	required uint32 version = 3;
	required uint32 locktime = 4;   		// block number or time this is valid from
	repeated TransactionInput inputs = 5;
	repeated TransactionOutput outputs = 6;
}

// a block. 
// matches the P2P Bitcoin protocol message
message Block {
	required uint32 bcsapiversion = 1;
	required uint32 version = 2;
	required bytes previousBlock = 3;		// previos block hash
	required bytes merkleRoot = 4;			// block content hash tree root
	required uint32 timestamp = 5;			// the block was mined at
	required uint32 difficulty = 6;			// encoded difficulty for POW
	required uint32 nonce = 7;				// parameter of POW
	repeated Transaction transactions = 8;
}


// a block chain reorg is a transaction removing and adding a few blocks at once
message TrunkUpdate {
	required uint32 bcsapiversion = 1;
	repeated Block added = 2;				// blocks added to trunk
	repeated Block removed = 3;				// blocks no longer on trunk
}

message Hash {
	required uint32 bcsapiversion = 1;
	repeated bytes hash = 2;
}

message AccountRequest {
	required uint32 bcsapiversion = 1;
	repeated string address = 2;			// indicate interest in addresses
	optional uint32 from = 3;				// from time 
}

message AccountStatement {

	message Posting {
		required TransactionOutput output = 1;	
		required bytes  block = 2;
		required uint32 timestamp = 3;
		required uint32 height = 4;
		optional bytes  spent = 5;
	}
	
	required uint32 bcsapiversion = 1;
	required bytes lastBlock = 2;
	required uint32 timestamp = 3;
	repeated TransactionOutput opening = 4;
	repeated Posting posting = 5;
	repeated Transaction unconfirmedSpend = 6;
	repeated Transaction unconfirmedReceive = 7;
}

message ExceptionMessage {
	required uint32 bcsapiversion = 1;
	repeated string message = 2;
}

message Color {
	required bytes transaction = 1;
	required string terms = 2;
	required uint64 unit = 3;
	required uint32 expiryHeight = 4;
	required bytes pubkey = 5;
	required bytes signature = 6;
}

message FilterRequest {
	required bytes filter = 1;
	required uint32 hashFunctions = 2;
	required uint32 tweak = 3;
	required uint32 mode = 4;
}
